<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">paul_s_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_continue">Continue</string>
<string name="lbl_33_min">33 min</string>
<string name="lbl_5000">5000 </string>
<string name="lbl_chloe">Chloe</string>
<string name="lbl_40km">40km</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Register Now</string>
<string name="lbl_4_6_m">4.6 M</string>
<string name="lbl_download">Download</string>
<string name="msg_confirm_passwor">Confirm password</string>
<string name="lbl_initokyolagii">initokyolagii</string>
<string name="lbl_or_login_with">Or Login with</string>
<string name="lbl_about">About</string>
<string name="lbl_23_min">23 min</string>
<string name="msg_continue_as_a_g">Continue as a guest</string>
<string name="msg_enter_your_pass">Enter your password</string>
<string name="lbl_brand_name">Brand_Name</string>
<string name="lbl_27_min">27 min</string>
<string name="lbl_penelope">Penelope</string>
<string name="lbl_abigail">Abigail</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_612_eliza_jack">612: Eliza Jackson  |  The Real Life of a UI Designer</string>
<string name="lbl_location">Location</string>
<string name="lbl_darkmode">Darkmode</string>
<string name="msg_this_is_a_list">This is a list of people who have liked you and your matches.</string>
<string name="lbl_leilani_19">Leilani, 19</string>
<string name="lbl_username">Username</string>
<string name="lbl_shop_now">Shop Now</string>
<string name="lbl_20_28">20-28</string>
<string name="lbl_2_55_pm">2:55 PM</string>
<string name="lbl_edit_profile">Edit Profile</string>
<string name="lbl_sophia">Sophia</string>
<string name="lbl_3_10_pm">3:10 PM</string>
<string name="msg_my_name_is_jess">My name is Jessica Parker and I enjoy meeting new people and finding ways to help them have an uplifting experience. I enjoy reading..</string>
<string name="lbl_mimi_headline">Mimi Headline</string>
<string name="lbl_typing">Typing..</string>
<string name="lbl_kyle_24">Kyle, 24</string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
<string name="lbl_distance">Distance</string>
<string name="lbl_content">Content</string>
<string name="msg_continue_with_e">Continue with email</string>
<string name="lbl_view">View</string>
<string name="msg_ui_breakfast_sh">UI Breakfast Show</string>
<string name="lbl_elizabeth">Elizabeth</string>
<string name="lbl_maguwoharjo">Maguwoharjo</string>
<string name="msg_ig_tokyovibes">IG : tokyovibess_ </string>
<string name="lbl_views">Views</string>
<string name="lbl_annabelle_20">Annabelle, 20</string>
<string name="lbl_profil_pengguna">Profil Pengguna</string>
<string name="msg_use_phone_numbe">Use phone number</string>
<string name="lbl_filters">Filters</string>
<string name="lbl_followers">Followers</string>
<string name="lbl_1m">1M</string>
<string name="lbl_interested_in">Interested in</string>
<string name="lbl_password">Password</string>
<string name="lbl_you">You</string>
<string name="lbl_yesterday">Yesterday</string>
<string name="lbl_clear">Clear</string>
<string name="lbl_emelie">Emelie</string>
<string name="lbl_5_coin">-5 coin</string>
<string name="lbl_1_hour">1 hour</string>
<string name="lbl_likes">Likes</string>
<string name="msg_you_hello_how">You: Hello how are you?</string>
<string name="msg_ok_see_you_the">Ok, see you then.</string>
<string name="lbl_amelia">Amelia</string>
<string name="lbl_50_min">50 min</string>
<string name="lbl_3_12_pm">3:12 PM</string>
<string name="lbl_trending">Trending</string>
<string name="lbl_age">Age</string>
<string name="lbl_reagan_24">Reagan, 24</string>
<string name="lbl_matches">Matches</string>
<string name="msg_only_download_v">Only Download via Wifi</string>
<string name="msg_hi_jake_how_ar">Hi Jake, how are you? I saw on the app that we\u2019ve crossed paths several times this week &#128516;</string>
<string name="lbl_gallery">Gallery </string>
<string name="lbl_today">Today</string>
<string name="lbl_follow">Follow</string>
<string name="lbl_girls">Girls</string>
<string name="lbl_sponsored">Sponsored</string>
<string name="lbl_favourite">Favourite</string>
<string name="lbl_preferences">Preferences</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="msg_welcome_back_g">Welcome back! Glad to see you, Again!</string>
<string name="lbl_2_6m">2.6M</string>
<string name="lbl_activities">Activities</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_read_more">Read more</string>
<string name="lbl_ava">Ava</string>
<string name="lbl_your_message">Your message</string>
<string name="lbl_online">Online</string>
<string name="lbl_email">Email</string>
<string name="lbl_boys">Boys</string>
<string name="lbl_search">Search</string>
<string name="lbl_1">1</string>
<string name="lbl_2">2</string>
<string name="msg_you_great_i_wi">You: Great I will write later..</string>
<string name="msg_agree_and_regis">Agree and Register</string>
<string name="msg_sure_let_s_do">Sure, let\u2019s do it! &#128522;</string>
<string name="lbl_register_now">Register Now</string>
<string name="lbl_login">Login</string>
<string name="lbl_terms_of_use">Terms of use</string>
<string name="msg_great_i_will_wr">Great I will write later the exact
time and place. See you soon!</string>
<string name="lbl_popular">Popular</string>
<string name="lbl_grace">Grace</string>
<string name="lbl_messages">Messages</string>
<string name="lbl_hadley_25">Hadley, 25</string>
<string name="msg_enter_your_emai">Enter your email</string>
<string name="lbl_sticker">Sticker &#128525;</string>
<string name="msg_sign_up_to_cont">Sign up to continue</string>
<string name="lbl_emma">Emma</string>
<string name="lbl_explore">Explore</string>
<string name="lbl_55_min">55 min</string>
<string name="msg_you_hey_what">You: Hey! What\u2019s up, long time..</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
