<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listphotoSixRowModel" type="com.paulsapplication.app.modules.messages.data.model.ListphotoSixRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowphoto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearPhoto"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" android:layout_width="0dp"
            android:orientation="vertical" style="@style/groupStylewhite_2">
            <ImageView android:id="@+id/imagePhotoSix"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxh"
                android:layout_marginHorizontal="@dimen/_4pxh"
                android:layout_marginVertical="@dimen/_4pxv"
                android:layout_width="@dimen/_48pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_photo_48x48}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_photo_48x48"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnname"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_weight="0.8" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNameFive"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.54"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listphotoSixRowModel.txtNameFive}"
                    style="@style/txtAsapromanbold14_1" tools:text="@string/lbl_emelie"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_150pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.46"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listphotoSixRowModel.txtTime}"
                    style="@style/txtAsapromanbold12" tools:text="@string/lbl_23_min"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowmessage"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMessage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_weight="0.76"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listphotoSixRowModel.txtMessage}"
                    style="@style/txtK2Dregular14_1" tools:text="@string/lbl_sticker"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMessageindicat"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_145pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.24"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_6pxh"
                    android:paddingStart="@dimen/_6pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@{listphotoSixRowModel.txtMessageindicat}"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
