<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpEmailVM" type="com.paulsapplication.app.modules.signupemail.data.viewmodel.SignUpEmailVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearSignUpEmail"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearStatusbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeftSide"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_leftside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_leftside"/>
                <ImageView android:id="@+id/imageRightSide"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_219pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rightside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_41pxh"
            android:paddingHorizontal="@dimen/_13pxh"
            android:paddingVertical="@dimen/_13pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        <TextView android:id="@+id/txtWelcomebackG"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent"
            android:text="@{signUpEmailVM.signUpEmailModel.txtWelcomebackG}"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_welcome_back_g"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etRegisterButto" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signUpEmailVM.signUpEmailModel.etRegisterButtoValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etRegisterButtoOne"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signUpEmailVM.signUpEmailModel.etRegisterButtoOneValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etRegisterButtoTwo"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signUpEmailVM.signUpEmailModel.etRegisterButtoTwoValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor"
            android:id="@+id/etRegisterButtoThree"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={signUpEmailVM.signUpEmailModel.etRegisterButtoThreeValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAgreeAndRegister"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20pxh"
            android:layout_marginVertical="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/msg_agree_and_regis"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_agree_and_regis"/>
    </LinearLayout>
</layout>
