<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.paulsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearStatusbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeftSide"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_leftside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_leftside"/>
                <ImageView android:id="@+id/imageRightSide"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_219pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rightside"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_41pxh"
            android:paddingHorizontal="@dimen/_13pxh"
            android:paddingVertical="@dimen/_13pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        <TextView android:id="@+id/txtWelcomebackG"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent"
            android:text="@{loginVM.loginModel.txtWelcomebackG}"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_welcome_back_g"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_emai"
            android:id="@+id/etRegisterButto"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etRegisterButtoValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
            android:drawableEnd="@drawable/img_fluenteye20filled"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_pass"
            android:id="@+id/etRegisterButtoOne"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_12pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etRegisterButtoOneValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgotPassword}"
            style="@style/txtUrbanistromansemibold14" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_67pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlineone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearLoginwith"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/indigo_50"
                    android:id="@+id/lineLineOne"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.36" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOrLoginwith"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.27"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtOrLoginwith}"
                    style="@style/txtUrbanistromansemibold14" tools:text="@string/lbl_or_login_with"/>
                <View android:background="@color/indigo_50"
                    android:id="@+id/lineLineTwo"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.36" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowfacebook"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout android:id="@+id/frameStackfacebook"
                    android:layout_height="@dimen/_56pxv"
                    android:layout_width="@dimen/_105pxh" style="@style/groupStylecornerRadius_1">
                    <ImageView android:id="@+id/imageFacebook"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginEnd="@dimen/_40pxh"
                        android:layout_marginStart="@dimen/_40pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="@dimen/_12pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_facebook"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_facebook"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/frameStackgoogle"
                    android:layout_height="@dimen/_56pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_width="@dimen/_105pxh" style="@style/groupStylecornerRadius_1">
                    <ImageView android:id="@+id/imageGoogle"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginEnd="@dimen/_40pxh"
                        android:layout_marginStart="@dimen/_40pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="@dimen/_23pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_google"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/frameStackfire"
                    android:layout_height="@dimen/_56pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_width="@dimen/_105pxh" style="@style/groupStylecornerRadius_1">
                    <ImageView android:id="@+id/imageFire"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_26pxh"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_40pxh"
                        android:layout_marginStart="@dimen/_40pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="@dimen/_21pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_fire"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_fire"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_83pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtConfirmation}"
            style="@style/txtPoppinssemibold15" tools:text="@string/msg_don_t_have_an_a"/>
    </LinearLayout>
</layout>
